# feotensor

./: CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  release.config.js
.github/: dependabot.yml
.github/workflows/: ci.yml  lint.yml  publish.yml  release.yml  test.yml
benches/: tensor_bench.rs
src/: axes.rs  coordinate.rs  dynamic_matrix.rs  dynamic_vector.rs  error.rs  iter.rs  lib.rs  matrix.rs  shape.rs  static_matrix.rs  static_vector.rs  storage.rs  tensor.rs  traits.rs  vector.rs
