[package]
name = "feotensor"
version = "0.1.0"
edition = "2021"
description = "A tensor library for scientific computing in Rust"
license = "MIT"
homepage = "https://github.com/Rust-Scientific-Computing/feotensor"
repository = "https://github.com/Rust-Scientific-Computing/feotensor"

[dependencies]
itertools = "0.13.0"
num = "0.4.3"
